{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 61,
  "lineage": "12dc85e7-42af-22f2-fd76-f5087ba1ee61",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0854d75f165efe1c2",
            "arn": "arn:aws:ec2:us-east-1:711893265317:elastic-ip/eipalloc-0854d75f165efe1c2",
            "association_id": "eipassoc-0118439ce5341c2a9",
            "domain": "vpc",
            "id": "eipalloc-0854d75f165efe1c2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07700462e4410268c",
            "private_dns": "ip-10-0-1-83.ec2.internal",
            "private_ip": "10.0.1.83",
            "public_dns": "ec2-98-90-143-184.compute-1.amazonaws.com",
            "public_ip": "98.90.143.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:internet-gateway/igw-02f817680ccac7924",
            "id": "igw-02f817680ccac7924",
            "owner_id": "711893265317",
            "tags": {
              "Name": "vsc-igw"
            },
            "tags_all": {
              "Name": "vsc-igw"
            },
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0854d75f165efe1c2",
            "association_id": "eipassoc-0118439ce5341c2a9",
            "connectivity_type": "public",
            "id": "nat-076e0197b4db4567a",
            "network_interface_id": "eni-07700462e4410268c",
            "private_ip": "10.0.1.83",
            "public_ip": "98.90.143.184",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f25bb81975448067",
            "tags": {
              "Name": "vsc-nat"
            },
            "tags_all": {
              "Name": "vsc-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:route-table/rtb-0dba4cf281ae07edd",
            "id": "rtb-0dba4cf281ae07edd",
            "owner_id": "711893265317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-076e0197b4db4567a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vsc-private-rt"
            },
            "tags_all": {
              "Name": "vsc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:route-table/rtb-0f6e7712c2dccbee1",
            "id": "rtb-0f6e7712c2dccbee1",
            "owner_id": "711893265317",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f817680ccac7924",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vsc-public-rt"
            },
            "tags_all": {
              "Name": "vsc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a198db3a086d954",
            "route_table_id": "rtb-0dba4cf281ae07edd",
            "subnet_id": "subnet-0941410a0e2b37f83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0dcbe240ce3459",
            "route_table_id": "rtb-0dba4cf281ae07edd",
            "subnet_id": "subnet-0d97b2228fabc134b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0782743afdc04d58d",
            "route_table_id": "rtb-0f6e7712c2dccbee1",
            "subnet_id": "subnet-0f25bb81975448067"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013b38a88fe2fb3b6",
            "route_table_id": "rtb-0f6e7712c2dccbee1",
            "subnet_id": "subnet-045b9bf4486cc3345"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:security-group/sg-077ea95c968cad4c5",
            "description": "Security group for RDS",
            "egress": [],
            "id": "sg-077ea95c968cad4c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "13.232.162.175/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f68617e9dd819cc4"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "vsc-db-sg",
            "name_prefix": "",
            "owner_id": "711893265317",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:security-group/sg-0f68617e9dd819cc4",
            "description": "Security group for Lambda Agents",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f68617e9dd819cc4",
            "ingress": [],
            "name": "vsc-lambda-sg",
            "name_prefix": "",
            "owner_id": "711893265317",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:security-group/sg-0f1c40d175a2ef67d",
            "description": "Security group for Redis",
            "egress": [],
            "id": "sg-0f1c40d175a2ef67d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f68617e9dd819cc4"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "vsc-redis-sg",
            "name_prefix": "",
            "owner_id": "711893265317",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:subnet/subnet-0941410a0e2b37f83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0941410a0e2b37f83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711893265317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsc-private-1"
            },
            "tags_all": {
              "Name": "vsc-private-1"
            },
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:subnet/subnet-0d97b2228fabc134b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d97b2228fabc134b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711893265317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsc-private-2"
            },
            "tags_all": {
              "Name": "vsc-private-2"
            },
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:subnet/subnet-0f25bb81975448067",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f25bb81975448067",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711893265317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsc-public-1"
            },
            "tags_all": {
              "Name": "vsc-public-1"
            },
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:subnet/subnet-045b9bf4486cc3345",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b9bf4486cc3345",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711893265317",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vsc-public-2"
            },
            "tags_all": {
              "Name": "vsc-public-2"
            },
            "vpc_id": "vpc-0bb09e85ac792f453"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:711893265317:vpc/vpc-0bb09e85ac792f453",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c29ad1a18d28edb",
            "default_route_table_id": "rtb-047748e647764d374",
            "default_security_group_id": "sg-031cb2a9e84bcf690",
            "dhcp_options_id": "dopt-0afe129a19ee84002",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb09e85ac792f453",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047748e647764d374",
            "owner_id": "711893265317",
            "tags": {
              "Name": "vsc-vpc"
            },
            "tags_all": {
              "Name": "vsc-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}